...
            app:rewind_increment="1000"
            app:show_buffering="when_playing"
            app:show_shuffle_button="false"
            app:surface_type="surface_view" />

        <TextView
            android:id="@+id/step_detail_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle"
            android:gravity="center"
...
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exo_player"
            tools:text="1" />

        <TextView
            android:id="@+id/step_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/step_detail_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/step_detail_number"
...
